test/expected/set_explicit-int.out
set explicit-int
    ^
5: error: "explicit-int" set option requires =<value>
